[package]
name = "reproduction"
version = "0.1.0"
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
actix-files = { version = "0.6.2", optional = true }
actix-web = { version = "4.3.1", optional = true }
leptos = { version = "0.4.2", default-features = false, features = [
	"serde",
	"nightly",
] }
leptos_actix = { version = "0.4.2", optional = true }
leptos_router = { version = "0.4.2", default-features = false, features = [
	"nightly",
] }
serde = "1.0.171"
wasm-bindgen = { version = "0.2.87", optional = true }

[features]
default = ["server"]
server = [
	"dep:actix-files",
	"dep:actix-web",
	"dep:leptos_actix",
	"leptos/ssr",
	"leptos_router/ssr",
	"ssr",
]
client = ["dep:wasm-bindgen", "leptos/hydrate", "leptos_router/hydrate"]
ssr = []

[profile.release]
opt-level = 3
lto = "fat"

[profile.release-wasm]
inherits = "release"
opt-level = "z"
codegen-units = 1

[profile.dev]
opt-level = 0

[profile.dev.package."*"]
opt-level = 3

[profile.dev.build-override]
debug = true

[profile.dev-wasm]
inherits = "dev"
opt-level = "z"
codegen-units = 1
